@@ -10,117 +10,40 @@
         li.dashboard_nav
           a href=root_path 
             span.icon16.icomoon-icon-screen-2
-            = bt("dashboard")
+            = bts("dashboard")
         /  MENU
-        - if (can? :manage, Mokio::Menu) || (can? :create, Mokio::Menu)
-          li.menu_nav
-            - if (can? :manage, Mokio::Menu)
-              a href=menus_path
-                span.icon16.icomoon-icon-menu-2
-                = bt("menu", "backend.sidebar")
-            - if can? :create, Mokio::Menu
-              a href=new_menu_path
-                span.icon14.icomoon-icon-plus
+        = sidebar_btn Mokio::Menu, "icomoon-icon-menu-2"
         /  CONTENT MANAGEMENT
         - if (can? :manage, Mokio::Content) || (can? :create, Mokio::Content)
-          li.content_nav
+          li.contents_nav
             a href="#"
               span.icon16.minia-icon-pencil-2
-              = bt("content_management", "backend.sidebar")
+              = bts("content_management")
             ul.sub#add_content
-              li
-                - if can? :manage, Mokio::Content
-                  a href=contents_path
-                    span.icon16.icomoon-icon-list-view-2
-                    = bt("all", "backend.sidebar")
-                  span
-              li
-                - if can? :manage, Mokio::Content
-                  a href=articles_path
-                    span.icon16.icomoon-icon-file
-                    = bt("article", "backend.sidebar")
-                - if can? :create, Mokio::Content
-                  a href=new_article_path
-                    span.icon14.icomoon-icon-plus
-              li
-                - if can? :manage, Mokio::Content
-                  a href=pic_galleries_path
-                    span.icon16.icomoon-icon-picture
-                    = bt("pic_galery", "backend.sidebar")
-                - if can? :create, Mokio::Content
-                  a href=new_pic_gallery_path
-                    span.icon14.icomoon-icon-plus
-              li
-                - if can? :manage, Mokio::Content
-                  a href=mov_galleries_path
-                    span.icon16.icomoon-icon-movie
-                    = bt("mov_galery", "backend.sidebar")
-                - if can? :create, Mokio::Content
-                  a href=new_mov_gallery_path
-                    span.icon14.icomoon-icon-plus
-              li
-                - if can? :manage, Mokio::Content
-                  a href=contacts_path
-                    span.icon16.icomoon-icon-mail-3
-                    = bt("contact", "backend.sidebar")
-                - if can? :create, Mokio::Content
-                  a href=new_contact_path
-                    span.icon14.icomoon-icon-plus
+              = sidebar_btn Mokio::Content, "icomoon-icon-list-view-2", bts("all"), false
+              = sidebar_btn Mokio::Article, "icomoon-icon-file"
+              = sidebar_btn Mokio::PicGallery, "icomoon-icon-picture"
+              = sidebar_btn Mokio::MovGallery, "icomoon-icon-movie"
+              = sidebar_btn Mokio::Contact, "icomoon-icon-file"
         /  SITE ELEMENTS
         - if can? :create, Mokio::Content
           li.site_elements_nav
             a href="#"
               span.icon16.icomoon-icon-puzzle
-              = bt("site_elements", "backend.sidebar")
+              = bts("site_elements")
             ul.sub#site_elements
-              li.position_nav
-                - if can? :manage, Mokio::ModulePosition
-                  a href=module_positions_path
-                    span.icon16.icomoon-icon-grid-view
-                    = bt("module_position", "backend.sidebar")
-                - if can? :create, Mokio::ModulePosition
-                  a href=new_module_position_path
-                    span.icon14.icomoon-icon-plus
-              li.static_module_nav
-                - if can? :manage, Mokio::StaticModule
-                  a href=static_modules_path
-                    span.icon16.icomoon-icon-cube
-                    = bt("modules", "backend.sidebar")
-                - if can? :create, Mokio::StaticModule
-                  a href=new_static_module_path
-                    span.icon14.icomoon-icon-plus
-              li.external_script_nav
-                - if can? :manage, Mokio::ExternalScript
-                  a href=external_scripts_path
-                    span.icon16.icomoon-icon-embed
-                    = bt("external_script", "backend.sidebar")
-                - if can? :create, Mokio::ExternalScript
-                  a href=new_external_script_path
-                    span.icon14.icomoon-icon-plus
+              = sidebar_btn Mokio::ModulePosition, "icomoon-icon-grid-view"
+              = sidebar_btn Mokio::StaticModule, "icomoon-icon-cube"
+              = sidebar_btn Mokio::ExternalScript, "icomoon-icon-embed"
           /  SETTINGS
         - if can? :manage, :all
           li.settings_nav
             a href="#"
               span.icon16.minia-icon-cog
-              = bt("settings", "backend.sidebar")
+              = bts("settings")
             ul.sub#settings
-              li.user_nav
-                - if can? :manage, Mokio::User
-                  a href=users_path
-                    span.icon16.entypo-icon-users
-                    = bt("users", "backend.sidebar")
-                - if can? :create, Mokio::User
-                  a href=new_user_path
-                    span.icon14.icomoon-icon-plus
-              li.langs_nav
-                - if can? :manage, Mokio::Lang
-                  a href=langs_path
-                    span.icon16.brocco-icon-earth
-                    = bt("lang", "backend.sidebar")
-                - if can? :create, Mokio::Lang
-                  a href=new_lang_path
-                    span.icon14.icomoon-icon-plus
-
+              = sidebar_btn Mokio::User, "entypo-icon-users"
+              = sidebar_btn Mokio::Lang, "brocco-icon-earth"
   - if @obj_class == Mokio::Content && params[:action] == "index"
     = render :partial => "mokio/contents/content_info_widget"
 
