@@ -35,7 +35,6 @@ en:
     go_back: Go back
     site_preview: Your Site
     no_records_found: No records found
-    dashboard: Dashboard
     cancel: Cancel
     save: Save
     save_and_create_new: Save and new
@@ -110,13 +109,14 @@ en:
     change_password: Change Password
 
     sidebars:
-      users: Admins
+      dashboard: Dashboard
+      user: Admins
       sidebar_title: Sidebar
       content_management: Content management
       all: All
       article: Articles
-      pic_galery: Photo Galleries
-      mov_galery: Movie Galleries
+      pic_gallery: Photo Galleries
+      mov_gallery: Movie Galleries
       contact: Contact Pages
       menu: Menu
       modules: HTML Blocks
