@@ -35,7 +35,6 @@ pl:
     go_back: Powrót
     site_preview: Twoja Strona
     no_records_found: Nie znaleziono żadnej treści
-    dashboard: Dashboard
     cancel: Anuluj
     save: Zapisz
     save_and_create_new: Zapisz i utwórz nowy
@@ -110,13 +109,14 @@ pl:
     change_password: Zmień hasło
 
     sidebars:
-      users: Administratorzy
+      dashboard: Dashboard
+      user: Administratorzy
       sidebar_title: Nawigacja
       content_management: Zarządzanie treścią
       all: Wszystko
       article: Artykuły
-      pic_galery: Galerie Zdjęć
-      mov_galery: Galerie Filmów
+      pic_gallery: Galerie Zdjęć
+      mov_gallery: Galerie Filmów
       contact: Strony Kontaktowe
       menu: Menu
       modules: Bloki
@@ -505,7 +505,7 @@ pl:
     next: następny
     welcome_title: Witaj w Mokio!
     welcome_text: W kilku krokach pokażemy Ci jak stworzyć własna stronę www.
-    dashboard_nav_title: Biurko
+    dashboard_nav_title: Dashboard
     dashboard_nav_text: "Tutaj można oglądać ostatnio wprowadzone zmiany oraz łatwo znaleźć rzeczy do naprawienia, np. treść bez menu lub menu bez treści."
     contentmanagment_nav_title: Zarządzanie treścią
     contentmanagment_nav_text: "Dodawanie, edycja i usuwanie treści. "
@@ -553,6 +553,12 @@ pl:
               blank: "Tytuł nie może być pusty"
             display_from:
               invalid: Przekracza datę do której ma być wyświetlana
+        mokio/lang:
+          attributes:
+            name:
+              blank: "Nazwa nie może być pusta"
+            shortname:
+              blank: "Nazwa skrócona nie może być pusta"
         mokio/article:
           attributes:
             title:
@@ -635,7 +641,7 @@ pl:
         name: Nazwa / Id
         script: Skrypt
       mokio/lang:
-        name: Tytuł
+        name: Nazwa
         shortname: Nazwa skrócona
         active: Włączony
       mokio/module_position:
