@@ -146,3 +146,5 @@ Mokio <add_release_date> v0.0.7
     10. Clean up the mess in translations
     11. Reorganization of menu
     12. Added spaces between form actions buttons
+    13. Add helper to create sidebar buttons (sidebar_btn)
+    14. Add translation helper for sidebar buttons (bts)
